--- a/chatbot_app/pyproject.toml
+++ b/chatbot_app/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "dotenv>=0.9.9",
     "groq>=0.31.0",
+    "langchain-groq>=0.3.7",
     "langgraph>=0.6.6",
     "streamlit>=1.49.0",
 ]
