--- a/chatbot_app/pyproject.toml
+++ b/chatbot_app/pyproject.toml
@@ -9,5 +9,6 @@ dependencies = [
     "groq>=0.31.0",
     "langchain-groq>=0.3.7",
     "langgraph>=0.6.6",
+    "langgraph-checkpoint-sqlite>=2.0.11",
     "streamlit>=1.49.0",
 ]
